examples/programs/valid/group_rectangle.sst
.version 1
; Move 4 lanes forming a 2x2 rectangle on the grid.
; Word 0 grid: x=[1,3,5,7,9] y=[2.5,5.0]
; Sites 0-4 = row 0 (y=2.5), sites 5-9 = row 1 (y=5.0)
; Sites 0,1,5,6 -> (1,2.5),(3,2.5),(1,5.0),(3,5.0) = 2x2 rectangle
; site_bus 0: src=[0,1,2,3,4] dst=[5,6,7,8,9]

const_lane 0x0000000000000000   ; fwd, site_bus, word 0, site 0, bus 0
const_lane 0x0000000000000001   ; fwd, site_bus, word 0, site 1, bus 0
const_lane 0x0000000000000005   ; fwd, site_bus, word 0, site 5, bus 0
const_lane 0x0000000000000006   ; fwd, site_bus, word 0, site 6, bus 0
move 4
halt
