examples/programs/invalid/group_not_rectangle.sst
.version 1
; Invalid: 3 lanes forming an L-shape, not a rectangle
; Word 0 grid: x=[1,3,5,7,9] y=[2.5,5.0]
; Sites 0,1 = (1,2.5),(3,2.5) and site 5 = (1,5.0) -> L-shape

const_lane 0x0000000000000000   ; fwd, site_bus, word 0, site 0, bus 0
const_lane 0x0000000000000001   ; fwd, site_bus, word 0, site 1, bus 0
const_lane 0x0000000000000005   ; fwd, site_bus, word 0, site 5, bus 0
move 3
halt
